--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-	"presets":["react", ["es2015",{"loose":true}]],
-	"plugins": ["transform-decorators-legacy", "react-hot-loader/babel"]
+  "presets": [
+    ["es2015", { "loose": true }],
+    "stage-1",
+    "react"
+  ],
+  "plugins": ["transform-decorators-legacy", "react-hot-loader/babel"]
 }
