--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build:client": "webpack --config build/webpack.config.client.js",
     "build:server": "webpack --config build/webpack.config.server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development node server/server.js",
+    "dev:server": "nodemon server/server.js",
     "lint": "eslint --ext .jsx --ext .js client/",
-    "preommit": "npm run lint",
-   },
+    "preommit": "npm run lint"
+  },
   "author": "olex",
   "license": "ISC",
   "dependencies": {
@@ -75,11 +75,13 @@
     "memory-fs": "^0.4.1",
     "mfs": "^0.1.1",
     "name-all-modules-plugin": "^1.0.1",
+    "nodemon": "^1.17.3",
     "qiniu": "^7.1.1",
     "react-hot-loader": "^3.1.3",
     "rimraf": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
-   }
+    "webpack-dev-server": "^2.9.5",
+    "webpack-merge": "^4.1.2"
+  }
 }
