--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -18,5 +18,7 @@
     "arrow-body-style": [0],
     "no-param-reassign": [0],
     "react/forbid-prop-types":[0],
+    "arrow-parens": [0],
+    "class-methods-use-this": [0],
   }
 }
