--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
-    "build:client": "webpack --config build/webpack.config.client.js",
-    "build:server": "webpack --config build/webpack.config.server.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.config.server.js",
+    "upload": "node build/upload.js",
+    "deploy": "npm run build && npm run upload",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "nodemon server/server.js",
+    "dev:server": "cross-env NODE_ENV=development nodemon server/server.js",
     "lint": "eslint --ext .jsx --ext .js client/",
     "preommit": "npm run lint",
     "start": "cross-env NODE_ENV=production node server/server.js"
