--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "cross-env NODE_ENV=development nodemon server/server.js",
     "lint": "eslint --ext .jsx --ext .js client/",
-    "preommit": "npm run lint",
+    "precommit": "npm run lint",
     "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "author": "olex",
